--- a/qqbx/index.html
+++ b/qqbx/index.html
@@ -489,8 +489,8 @@
     <div class="container">
         <div class="header">
             <h1>
-                <img src="assets/qq_emoji/297/apng/297.png" class="header-emoji" alt="" draggable="false">
-                <img src="assets/qq_emoji/424/apng/424.png" class="header-emoji" alt="" draggable="false">
+                <img id="header-emoji-zero" class="header-emoji" alt="" draggable="false">
+                <img id="header-emoji-one" class="header-emoji" alt="" draggable="false">
                 编解码工具
             </h1>
             <button class="theme-toggle" id="theme-toggle" title="切换主题">
